--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon index.js",
+    "start":"node index.js"
   },
   "keywords": [],
   "author": "",
